tractopelle support; check if filament well inserted (jamming detection)

--- a/blv/printer-mmu2s-board.cfg
+++ b/blv/printer-mmu2s-board.cfg
@@ -18,7 +18,7 @@ default_type: command
 
 ########################################
 # E4 : MMU2S 5mm road with the 5 gears
-[tmc2208 manual_stepper gear_stepper]
+[tmc2209 manual_stepper gear_stepper]
 uart_pin: PD10 
 microsteps: 16
 run_current: 1.000
@@ -32,9 +32,9 @@ step_pin: PD13
 dir_pin: !PD11
 enable_pin: !PG2
 # 140 : mk8 gear
-step_distance: .007142
+#step_distance: .007142
 # 165 : fystec gear for mmu2s
-#step_distance: .00606
+step_distance: .00606
 velocity: 40
 accel: 1500 # same value that your printer accel
 
@@ -49,8 +49,8 @@ interpolate: True
 sense_resistor: 0.110
 stealthchop_threshold: 100
 # comment this two line if you don't use sensorless
-#diag_pin: PC2 # X+
-#driver_SGTHRS: 75
+diag_pin: PC15 # Z+
+driver_SGTHRS: 75
 
 [manual_stepper idler_stepper]
 step_pin: PD12
@@ -61,8 +61,8 @@ step_distance: .04
 velocity: 100
 accel: 500
 # comment this two line if you don't use sensorless
-#endstop_pin: tmc2209_idler_stepper:virtual_endstop
-#homing_retract_dist: 0
+endstop_pin: tmc2209_idler_stepper:virtual_endstop
+homing_retract_dist: 0
 
 ## IR extruder switch
 [filament_switch_sensor ir_sensor]
@@ -85,4 +85,17 @@ insert_gcode:
 #    M117 Filament in splitter
 
 ###############################################
+#
+# Purging buckets servo
+#
+###############################################
+[servo purge_servo]
+pin: PE11
 
+
+###############################################
+#
+# Filament length sensor
+#
+###############################################
+#[include printer-mmu2s-length-sensors.cfg]
