--- a/blv/printer-mmu2s.cfg
+++ b/blv/printer-mmu2s.cfg
@@ -6,88 +6,7 @@
 # config inspired from https://github.com/mwr666/klipper/blob/sunbeam2.0c_multi_mcu_mmu2/config/printer-protodev-corexy-multi-mcu-mmu2.cfg
 
 [include printer-mmu2s-board.cfg]
-
-################################
-#
-#  PARAMETER TO ADAPT TO YOUR SETUP
-#
-# variable_tmc2209_sensorless    : desactivate tmc2209 sensorless homing (0) (need a endstop switch on selctor), activate (1)
-# variable_timeout_pause         : timeout of the MMU2S pause when user intervention is needed
-# variable_disable_heater        : timeout of the heater during pause (temperature is saved and restored before resuming)
-# variable_bowden_load_length1   : length of the bowden between the selector and the entry of the extruder (quick MOVE)
-# variable_bowden_load_length2   : length of the bowden between the entry of the extruder and the extruder gear (slow MOVE)
-# variable_bowden_unload_length  : length between the the extruder gear and the PINDA
-# variable_pinda_load_length     : length between the MMU2S and the PINDA during loading
-# variable_pinda_unload_length   : length to retract the filament into the MMU2S from the PINDA during unloading
-# variable_colorselector         : the 5 positions of the color selector
-# variable_idler                 : the 5 positions of the idler bearing ball
-# variable_idler_home_position   : the homing position of the idler
-# variable_pause_x               : x position when MMU2S need intervention and the printer is paused
-# variable_pause_y               : y position when MMU2S need intervention and the printer is paused
-# variable_pause_z               : z lift when MMU2S need intervention and the printer is paused
-# variable_min_temp_extruder     : minimal required heater temperature to load/unload filament from the extruder gear to the nozzle
-# variable_extruder_eject_temp   : heater temperature used to eject filament during home if the filament is already loaded
-# variable_enable_5in1           : pass from MMU2S standart (0) to MMU2S-5in1 mode with splitter (1)
-# variable_purge_after_load      : enable (1) print purge after load at pause position, disable (0)
-# variable_purge_speed           : purge speed mm/min (if purge after loadenabled)
-# variable_t0_purge_load_length       : purge length mm for filament 0
-# variable_t1_purge_load_length       : purge length mm for filament 1
-# variable_t2_purge_load_length       : purge length mm for filament 2
-# variable_t3_purge_load_length       : purge length mm for filament 3
-# variable_t4_purge_load_length       : purge length mm for filament 4
-# 
-#
-################################
-[gcode_macro VAR_MMU2S]
-variable_tmc2209_sensorless: 0
-variable_timeout_pause: 36000
-variable_disable_heater: 600
-variable_bowden_load_length1: 0
-variable_bowden_load_length2: 70
-variable_bowden_unload_length: 20
-variable_pinda_load_length: 100
-variable_pinda_unload_length: 15
-variable_load_in_extruder: 52
-variable_unload_in_extruder1: 20
-variable_unload_in_extruder2: 30
-variable_colorselector = [73.5,57.5,45.5,31.5,18.5]
-variable_idler = [5,20,35,50,65]
-variable_idler_home_position: 85
-variable_pause_x: -10
-variable_pause_y: -40
-variable_pause_z: 10
-variable_min_temp_extruder: 180
-variable_extruder_eject_temp: 200
-variable_enable_5in1: 1
-variable_purge_after_load: 0
-variable_purge_speed: 200
-variable_t0_purge_load_length: 40
-variable_t0_purge_unload_length: 0
-variable_t1_purge_load_length: 40
-variable_t1_purge_unload_length: 0
-variable_t2_purge_load_length: 40
-variable_t2_purge_unload_length: 0
-variable_t3_purge_load_length: 40
-variable_t3_purge_unload_length: 0
-variable_t4_purge_load_length: 40
-variable_t4_purge_unload_length: 0
-variable_splitter_endstop: 0
-gcode:
-
-# MMU2S STANDARD
-# variable_bowden_load_length1: 770
-# variable_bowden_load_length2: 790
-# variable_bowden_unload_length: 830
-# MMU2S SPLITTER
-# variable_bowden_load_length1: 0
-# variable_bowden_load_length2: 102
-# variable_bowden_unload_length: 120
-
-################################
-#
-#  PARAMETER TO ADAPT TO YOUR SETUP
-#
-################################
+[include printer-mmu2s-config.cfg]
 
 ###############################
 ###############################
@@ -238,6 +157,11 @@ gcode:
     G90
     G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F3000
 
+[gcode_macro GO_TO_PARKING_OUT]
+gcode:
+    G91
+    G1 X{printer["gcode_macro VAR_MMU2S"].pause_x_out} Y{printer["gcode_macro VAR_MMU2S"].pause_y_out} F3000
+    G90
 
 # Pause the MMU, park the extruder at the parking position
 # Save the current state and start the delayed stop of the heated
@@ -257,6 +181,8 @@ gcode:
     bip
     bip
     PAUSE
+    G4 P2000
+    M400
     G91
     G1 Z{printer["gcode_macro VAR_MMU2S"].pause_z}
     G90
@@ -354,7 +280,13 @@ gcode:
         SELECT_TOOL VALUE={params.VALUE|int}
         LOAD_FILAMENT_TO_EXTRUDER
         LOAD_FILAMENT_IN_EXTRUDER
-	M400
+        {% if printer["gcode_macro VAR_MMU2S"].enable_length_sensor == 1 %}
+            {% if params.VALUE|int == 1 %}
+                 M400
+                 RESET_FILAMENT_LENGTH_SENSOR
+	         ENABLE_FILAMENT_LENGTH_SENSOR
+            {% endif %}
+        {% endif %}
     {% endif %}
 
 # Unload filament from nozzle to MMU2S
@@ -363,6 +295,9 @@ gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer["gcode_macro SELECT_TOOL"].color_selected|int != -1 %}
     M118 UT {printer["gcode_macro SELECT_TOOL"].color_selected|int} ...
+    {% if printer["gcode_macro VAR_MMU2S"].enable_length_sensor == 1 %}
+         DISABLE_FILAMENT_LENGTH_SENSOR
+    {% endif %}
     SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
     UNLOAD_FILAMENT_IN_EXTRUDER
     UNLOAD_FILAMENT_FROM_EXTRUDER
@@ -410,6 +345,137 @@ gcode:
     {% endif %}
     {% endif %}
 
+############################################
+#
+# Purge macros
+#
+#
+############################################
+[gcode_macro DEPLOY_PURGE]
+variable_z_lifted: -1
+variable_x_move: 40
+variable_y_move: 0
+variable_z_lift: 50
+gcode:
+    G90
+    G1 X{printer["gcode_macro VAR_MMU2S"].pause_x + printer["gcode_macro DEPLOY_PURGE"].x_move} Y{printer["gcode_macro VAR_MMU2S"].pause_y + printer["gcode_macro DEPLOY_PURGE"].y_move} F9000
+    {% if printer.toolhead.position.z|int < printer["gcode_macro DEPLOY_PURGE"].z_lift  %}
+    SET_GCODE_VARIABLE  MACRO=DEPLOY_PURGE VARIABLE=z_lifted VALUE=1
+    G91
+    G1 Z+{printer["gcode_macro DEPLOY_PURGE"].z_lift} F1200
+    G90
+    {% endif %}
+    G4 P1000
+    SET_SERVO SERVO=purge_servo angle=178
+    G90
+    G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F9000
+
+[gcode_macro RETRACT_PURGE]
+gcode:
+    G90
+    G1 X{printer["gcode_macro VAR_MMU2S"].pause_x + printer["gcode_macro DEPLOY_PURGE"].x_move} Y{printer["gcode_macro VAR_MMU2S"].pause_y + printer["gcode_macro DEPLOY_PURGE"].y_move} F9000
+    G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F9000
+    G1 X{printer["gcode_macro VAR_MMU2S"].pause_x + printer["gcode_macro DEPLOY_PURGE"].x_move} Y{printer["gcode_macro VAR_MMU2S"].pause_y + printer["gcode_macro DEPLOY_PURGE"].y_move} F9000
+    SET_SERVO SERVO=purge_servo angle=0
+    SET_SERVO SERVO=purge_servo angle=178
+    SET_SERVO SERVO=purge_servo angle=0
+    {% if printer["gcode_macro DEPLOY_PURGE"].z_lifted|int == 1 %}
+    G91
+    G1 Z-{printer["gcode_macro DEPLOY_PURGE"].z_lift} F1200
+    G90
+    {% endif %}
+    SET_GCODE_VARIABLE  MACRO=DEPLOY_PURGE VARIABLE=z_lifted VALUE=-1
+
+[gcode_macro MOVE_PURGE_FILAMENT]
+default_parameter_PURGE_LENGTH: 60
+default_parameter_PURGE_MAX: 10
+gcode:
+    {% if printer["gcode_macro VAR_MMU2S"].enable_purge_servo == 1 %}
+    M118 Purging : {PURGE_LENGTH|int} mm
+    G91
+    G92 E0
+    {% for i in range(PURGE_LENGTH|int//PURGE_MAX|int) %}
+    G1 E{PURGE_MAX} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
+    G4 P1000
+    {% endfor %}
+    G1 E{PURGE_LENGTH|int%PURGE_MAX|int} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
+    G4 P1000
+    G90
+    {% else %}
+        M118 Could not purge with servo, not enabled ...
+    {% endif %}
+
+[gcode_macro CHECK_JAMMING]
+gcode:
+    {% if printer["gcode_macro VAR_MMU2S"].enable_length_sensor == 1 %}
+        M118 capteur  : {printer["filament_length_sensor l1"].length|float}
+        M118 extruder : {printer["filament_length_sensor l1"].extruder_position|float}
+    {% endif %}
+
+[gcode_macro PURGE_FILAMENT]
+variable_purge_length: 0
+gcode:
+    {% if printer["gcode_macro VAR_MMU2S"].purge_after_load == 1 %}
+    {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
+    {% if printer.extruder.temperature > printer["gcode_macro VAR_MMU2S"].min_temp_extruder %}
+        M118 Purging Filament...
+        G91
+        G92 E0
+        G1 E2.0000 F1140
+        G1 E7.0000 F1680
+        G1 E1.0000 F168
+        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 0 %}
+	{% set purge_length = printer["gcode_macro VAR_MMU2S"].t0_purge_unload_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 1 %}
+	{% set purge_length = printer["gcode_macro VAR_MMU2S"].t1_purge_unload_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 2 %}
+	{% set purge_length = printer["gcode_macro VAR_MMU2S"].t2_purge_unload_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 3 %}
+	{% set purge_length = printer["gcode_macro VAR_MMU2S"].t3_purge_unload_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 4 %}
+	{% set purge_length = printer["gcode_macro VAR_MMU2S"].t4_purge_unload_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 0 %}
+	{% set purge_length = purge_length + printer["gcode_macro VAR_MMU2S"].t0_purge_load_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 1 %}
+	{% set purge_length = purge_length + printer["gcode_macro VAR_MMU2S"].t1_purge_load_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 2 %}
+	{% set purge_length = purge_length + printer["gcode_macro VAR_MMU2S"].t2_purge_load_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 3 %}
+	{% set purge_length = purge_length + printer["gcode_macro VAR_MMU2S"].t3_purge_load_length %}
+        {% endif %}
+        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 4 %}
+	{% set purge_length = purge_length + printer["gcode_macro VAR_MMU2S"].t4_purge_load_length %}
+        {% endif %}
+        G92 E0
+        {% if printer["gcode_macro VAR_MMU2S"].enable_length_sensor == 1 %}
+            RESET_FILAMENT_LENGTH_SENSOR
+        {% endif %}
+        {% if printer["gcode_macro VAR_MMU2S"].enable_purge_servo == 1 %}
+            MOVE_PURGE_FILAMENT PURGE_LENGTH={purge_length}
+        {% else %}
+            G1 E{purge_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
+        {% endif %}
+        {% if printer["gcode_macro VAR_MMU2S"].enable_length_sensor == 1 %}
+            M400
+            CHECK_JAMMING
+        {% endif %}
+        {% if printer["gcode_macro VAR_MMU2S"].enable_length_sensor == 1 %}
+            RESET_FILAMENT_LENGTH_SENSOR
+        {% endif %}
+        G92 E0
+        G90
+    {% endif %}
+    {% endif %}
+    {% endif %}
+
 
 ############################################
 #
@@ -417,6 +483,30 @@ gcode:
 # During loading, if the IR sensor does not detect the filament, it tries 3 times to reinsert it
 #
 ############################################
+
+# VERIFY if filament is correctly loaded
+[gcode_macro CHECK_LOAD_FILAMENT_IN_EXTRUDER]
+variable_filament_in: 0
+gcode:
+    {% if printer["gcode_macro CHECK_LOAD_FILAMENT_IN_EXTRUDER"].filament_in|int == 0 %}
+    {% if printer["filament_switch_sensor ir_sensor"].filament_detected == True %}
+    M118 Check if filament is loaded
+    G91
+    G92 E0
+    MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
+    G1 E10 F600
+    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+    MANUAL_STEPPER STEPPER=gear_stepper MOVE=-{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} SPEED=10 SET_POSITION=0 SYNC=0
+    G1 E-{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} F600
+    MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+    MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
+    G92 E0
+    G90
+    G4 P1000
+    {% endif %}
+    RETRY_LOAD_FILAMENT_IN_EXTRUDER
+    {% endif %}
 
 # Try to reinsert the filament into the extruder
 # Called when the IR sensor does not detect the filament
@@ -431,11 +521,11 @@ gcode:
         M118 Loading Filament...
         MMU_ERROR_INCREMENT_LOAD
         G90
-        G1 X{printer["gcode_macro VAR_MMU2S"].pause_x} Y{printer["gcode_macro VAR_MMU2S"].pause_y} F3000
+        GO_TO_PARKING
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=3 SET_POSITION=0 SYNC=0
-        G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder} F180
+        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
+        G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder} F600
         MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
         MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
@@ -443,55 +533,17 @@ gcode:
     {% endif %}
     {% endif %}
     G4 P1000
-    {% endif %}
-
-
-[gcode_macro PURGE_FILAMENT]
-gcode:
-    {% if printer["gcode_macro VAR_MMU2S"].purge_after_load == 1 %}
-    {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
-    {% if printer.extruder.temperature > printer["gcode_macro VAR_MMU2S"].min_temp_extruder %}
-        M118 Purging Filament...
+    {% else %}
+        M118 Filament in extruder : OK
         G91
         G92 E0
-        G1 E2.0000 F1140
-        G1 E7.0000 F1680
-        G1 E1.0000 F168
-        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 0 %}
-	G1 E{printer["gcode_macro VAR_MMU2S"].t0_purge_unload_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 1 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t1_purge_unload_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 2 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t2_purge_unload_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 3 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t3_purge_unload_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].old_color_selected|int == 4 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t4_purge_unload_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 0 %}
-	G1 E{printer["gcode_macro VAR_MMU2S"].t0_purge_load_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 1 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t1_purge_load_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-	M400
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 2 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t2_purge_load_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 3 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t3_purge_load_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
-        {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == 4 %}
-        G1 E{printer["gcode_macro VAR_MMU2S"].t4_purge_load_length} F{printer["gcode_macro VAR_MMU2S"].purge_speed}
-        {% endif %}
+    	SET_GCODE_VARIABLE MACRO=CHECK_LOAD_FILAMENT_IN_EXTRUDER VARIABLE=filament_in VALUE=1
+        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
+        G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder - 10} F600
+        MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
+        MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
-        G90
-    {% endif %}
-    {% endif %}
+	G90   
     {% endif %}
 
 # Load the filament into the extruder
@@ -505,18 +557,19 @@ gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     {% if printer.extruder.temperature > printer["gcode_macro VAR_MMU2S"].min_temp_extruder %}
         M118 Loading Filament...
+        SET_GCODE_VARIABLE MACRO=CHECK_LOAD_FILAMENT_IN_EXTRUDER VARIABLE=filament_in VALUE=0
         G91
         G92 E0
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=3 SET_POSITION=0 SYNC=0
-        G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder} F180
+        MANUAL_STEPPER STEPPER=gear_stepper MOVE={printer["gcode_macro VAR_MMU2S"].load_in_extruder} SPEED=10 SET_POSITION=0 SYNC=0
+        G1 E{printer["gcode_macro VAR_MMU2S"].load_in_extruder} F600
         MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
         MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G92 E0
         G90
         G4 P1000
-        RETRY_LOAD_FILAMENT_IN_EXTRUDER
-        RETRY_LOAD_FILAMENT_IN_EXTRUDER
-        RETRY_LOAD_FILAMENT_IN_EXTRUDER
+        CHECK_LOAD_FILAMENT_IN_EXTRUDER
+        CHECK_LOAD_FILAMENT_IN_EXTRUDER
+        CHECK_LOAD_FILAMENT_IN_EXTRUDER
         IS_FILAMENT_IN_EXTRUDER
         UNSELECT_TOOL
         PURGE_FILAMENT
@@ -1019,9 +1072,10 @@ gcode:
     MANUAL_STEPPER STEPPER=idler_stepper MOVE=0
     SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=tool_selected VALUE=-1
     SET_GCODE_VARIABLE MACRO=SELECT_TOOL VARIABLE=color_selected VALUE=-1
-    M118 Test load filament 0
+    M118 Test idler filament 0
     SELECT_TOOL VALUE=0
     {% if printer["gcode_macro VAR_MMU2S"].enable_5in1 == 0 %}
+    M118 Test load filament 0
     LOAD_FILAMENT_TO_PINDA
     G4 P1000
     MANUAL_STEPPER STEPPER=gear_stepper MOVE=-10
@@ -1070,8 +1124,8 @@ gcode:
         MMU_ERROR_INCREMENT_LOAD
         G91
         SELECT_TOOL VALUE={printer["gcode_macro SELECT_TOOL"].color_selected|int}
-        MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=3 SET_POSITION=0 SYNC=0
-	G1 E10 F180
+        MANUAL_STEPPER STEPPER=gear_stepper MOVE=10 SPEED=10 SET_POSITION=0 SYNC=0
+	G1 E10 F600
 	MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
         MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
         G1 E10 F600
@@ -1087,8 +1141,8 @@ gcode:
 gcode:
     {% if printer["gcode_macro PAUSE_MMU"].is_paused|int == 0 %}
     G91
-    MANUAL_STEPPER STEPPER=gear_stepper MOVE=20 SPEED=3 SET_POSITION=0 SYNC=0
-    G1 E20 F180
+    MANUAL_STEPPER STEPPER=gear_stepper MOVE=20 SPEED=10 SET_POSITION=0 SYNC=0
+    G1 E20 F600
     MANUAL_STEPPER STEPPER=gear_stepper SYNC=1
     MANUAL_STEPPER STEPPER=gear_stepper SET_POSITION=0
     UNSELECT_TOOL
