--- a/blv/printer.cfg
+++ b/blv/printer.cfg
@@ -18,11 +18,12 @@
 step_pin: PB9
 dir_pin: PE0
 enable_pin: !PE1
-step_distance: .005
+#step_distance: .005
+step_distance: .00625
 #endstop_pin: ^!PC3 # max : PC2
-position_endstop: -17
-position_min: -17
-position_max: 275
+position_endstop: -1
+position_min: -1
+position_max: 260
 homing_speed: 80
 endstop_pin: tmc2209_stepper_x:virtual_endstop
 homing_retract_dist: 0
@@ -31,7 +32,8 @@ homing_retract_dist: 0
 step_pin: PB8
 dir_pin: PG11
 enable_pin: !PG12
-step_distance: .005
+#step_distance: .005
+step_distance: .00625
 #endstop_pin: ^!PF2 # max : PF1
 endstop_pin: tmc2209_stepper_y:virtual_endstop
 position_min: -47
@@ -161,6 +163,10 @@ fan_speed: 1.0
 #[heater_fan fan1]
 #pin: PF9
 
+[controller_fan box]
+pin: PA2
+heater: extruder
+
 #[heater_fan fan2]
 #pin: PA2
 
@@ -182,9 +188,6 @@ fan_speed: 1.0
 #
 ##################################
 
-[virtual_sdcard]
-path: ~/.octoprint/uploads/
-
 [mcu]
 serial: /dev/serial/by-id/usb-Klipper_stm32f407xx_4C00230011504D5946303320-if00
 
@@ -200,6 +203,14 @@ timeout: 3600
 
 [respond]
 default_type: command
+
+[force_move]
+enable_force_move: True
+
+[virtual_sdcard]
+path: /home/pi/sdcard
+
+[display_status]
 
 ########################################
 # TMC2208 configuration
@@ -406,22 +417,22 @@ aliases:
 pin: PF0
 x_offset: 30
 y_offset: 5
-z_offset: 4.35
+z_offset: 6.10
 
 [bed_mesh]
 speed: 70
 horizontal_move_z: 10
-mesh_min: 20,5
-mesh_max: 240,200
-probe_count: 3,3
+mesh_min: 30,10
+mesh_max: 230,210
+probe_count: 5,5
 fade_start: 1.0
 fade_end: 10.0
 
 
 [screws_tilt_adjust]
-screw1: 0,-10
+screw1: 0,-1
 screw1_name: front left
-screw2: 160,-10
+screw2: 160,-1
 screw2_name: front right
 screw3: 0,160
 screw3_name: rear left
@@ -439,7 +450,7 @@ gcode:
     G90
     G1 Z20 F300
     G28 X0 Y0
-    G1 X247 F3600
+    G1 X260 F3600
     G4 P1000
     G1 X100 Y100 F3600
     G28 Z0
@@ -453,7 +464,7 @@ gcode:
     G90
     G1 Z20 F300
     G28 X0 Y0
-    G1 X247 F3600
+    G1 X260 F3600
     G4 P1000
     G1 X0 Y0 F3600
     BED_MESH_CALIBRATE
@@ -464,7 +475,7 @@ z_positions:
     -65,85
     295,85
 points:
-    -10,105
+    5,105
     200,105
 horizontal_move_z: 10
 retries: 5
@@ -473,7 +484,7 @@ retry_tolerance: 0.05
 [gcode_macro Z_TILT_ADJUST]
 rename_existing: OLDZ_TILT_ADJUST
 gcode:
-    G1 X247 F3600
+    G1 X260 F3600
     G4 P1000
     G1 X100 Y100 F3600
     OLDZ_TILT_ADJUST
@@ -501,10 +512,12 @@ gcode:
 
 [gcode_macro START_PRINT]
 default_parameter_BED_TEMP: 60
-default_parameter_EXTRUDER_TEMP: 250
+default_parameter_EXTRUDER_TEMP: 200
+default_parameter_LOAD: -1
 gcode:
     # HOME MMU
     HOME_MMU
+    SET_SERVO SERVO=purge_servo angle=0
     # metric values
     G21
     # Use absolute coordinates
@@ -534,6 +547,25 @@ gcode:
     clean
     # zero the extruded length
     G92 E0
+    {% if LOAD|int != -1 %}
+        {% if LOAD|int == 0 %}
+            T0
+        {% endif %}
+        {% if LOAD|int == 1 %}
+            T1
+        {% endif %}
+        {% if LOAD|int == 2 %}
+            T2
+        {% endif %}
+        {% if LOAD|int == 3 %}
+            T3
+        {% endif %}
+        {% if LOAD|int == 4 %}
+            T4
+        {% endif %}
+        G92 E0
+    {% endif %}
+    GO_TO_PARKING_OUT
     # start printing
     G1 F9000
     M117 Printing...
@@ -574,6 +606,45 @@ gcode:
     G4 P1000 ; wait 1 s
     SET_PIN PIN=beeper VALUE=0
 
+###########   MAINSAIL #
+
+[gcode_macro CANCEL_PRINT]
+rename_existing: BASE_CANCEL_PRINT
+default_parameter_X: 230
+default_parameter_Y: 230
+default_parameter_Z: 10
+gcode:
+    M104 S0
+    M140 S0
+    M141 S0
+    M106 S0
+    CLEAR_PAUSE
+    SDCARD_RESET_FILE
+    BASE_CANCEL_PRINT
+
+[gcode_macro PAUSE]
+rename_existing: BASE_PAUSE
+default_parameter_X: 230
+default_parameter_Y: 230
+default_parameter_Z: 10
+gcode:
+    SAVE_GCODE_STATE NAME=PAUSE_state
+    BASE_PAUSE
+    G91
+    G1 E-1.7 F2100
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F6000
+    G91
+
+[gcode_macro RESUME]
+rename_existing: BASE_RESUME
+gcode:
+    G91
+    G1 E1.7 F2100
+    G91
+    RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1
+    BASE_RESUME
 
 ########################
 ########################
