add missing config file

--- a/vking/printer.cfg
+++ b/vking/printer.cfg
@@ -25,6 +25,8 @@ hold_current: 0.500
 stealthchop_threshold: 250
 interpolate: True
 sense_resistor: 0.110
+diag_pin: ^P1.29
+driver_SGTHRS: 100
 
 [tmc2209 stepper_y]
 uart_pin: P1.15
@@ -34,6 +36,8 @@ hold_current: 0.500
 stealthchop_threshold: 250
 interpolate: True
 sense_resistor: 0.110
+diag_pin: ^P1.27
+driver_SGTHRS: 100
 
 [tmc2208 stepper_z]
 uart_pin: P1.10
@@ -64,25 +68,30 @@ sense_resistor: 0.110
 
 [stepper_x]
 step_pin: P2.2
-dir_pin: P2.6
+dir_pin: !P2.6
 enable_pin: !P2.1
 step_distance: .00625
-endstop_pin: P1.29
-position_endstop: 0
-position_min: 0
-position_max: 340
-homing_speed: 70
+#endstop_pin: P1.29
+position_endstop: -1
+position_min: -1
+position_max: 375
+homing_speed: 100
+homing_retract_dist: 0
+endstop_pin: tmc2209_stepper_x:virtual_endstop
 
 [stepper_y]
 step_pin: P0.19
-dir_pin: P0.20
+dir_pin: !P0.20
 enable_pin: !P2.8
 step_distance: .00625
-endstop_pin: P1.27
-position_endstop: -20
+#endstop_pin: P1.27
+position_endstop: 380
 position_min: -20
-position_max: 345
-homing_speed: 70
+position_max: 380
+homing_speed: 100
+homing_retract_dist: 0
+endstop_pin: tmc2209_stepper_y:virtual_endstop
+#homing_positive_dir: true
 
 [stepper_z]
 step_pin: P0.22
@@ -110,7 +119,8 @@ nozzle_diameter: 0.400
 filament_diameter: 1.750
 max_extrude_only_distance: 200.0
 max_extrude_cross_section: 50.0
-heater_pin: P2.7
+#heater_pin: P2.7
+heater_pin: P2.4
 sensor_type: ATC Semitec 104GT-2
 #sensor_pin: P0.24
 sensor_pin: P0.25
@@ -131,6 +141,7 @@ min_extrude_temp: 0
 #dir_pin: P0.0
 #enable_pin: !P0.10
 #heater_pin: P2.4
+#heater_pin: P2.7
 #sensor_pin: P0.25
 #...
 
@@ -152,6 +163,10 @@ pid_Kd: 346.880
 [fan]
 pin: P2.3
 
+[controller_fan box]
+pin: P1.24
+heater: extruder
+
 [virtual_sdcard]
 path: ~/.octoprint/uploads/
 #path: /home/pi/sdcard
@@ -162,10 +177,16 @@ serial: /dev/serial/by-id/usb-Klipper_lpc1768_0C600102E4182DAFBD379E5BC22000F5-i
 [printer]
 kinematics: corexy
 max_velocity: 400
-#max_accel: 3000
-max_accel: 1500
+#max_accel: 1500
+max_accel: 2000
+max_accel_to_decel: 2000
 max_z_velocity: 5
 max_z_accel: 100
+
+[input_shaper]
+shaper_freq_x: 36.86
+shaper_freq_y: 23.7
+shaper_type: mzv
 
 [force_move]
 enable_force_move: True
@@ -213,7 +234,7 @@ pin: P1.25
 x_offset: 35
 y_offset: 0
 #z_offset: 4.36
-z_offset: 3.35
+z_offset: 3.25
 
 [bed_mesh]
 speed: 100
@@ -221,20 +242,20 @@ horizontal_move_z: 10
 #samples: 2
 #sample_retract_dist: 10
 mesh_min: 40,5
-mesh_max: 350,325
+mesh_max: 350,375
 probe_count: 4,4
 fade_start: 1.0
 fade_end: 10.0
 
 [homing_override]
-set_position_z: 10
+set_position_z: 0
 axes: z
 gcode:
     G90
     G1 Z20 F300
     G28 X0 Y0
-    G1 Y80 F3600
-    G1 X340 F3600
+    G1 X375 F3600
+    G1 Y-10 F3600
     G4 P1000
     G1 X135 Y172 F3600
     G28 Z0
@@ -242,13 +263,13 @@ gcode:
     G1 Z10 F300
 
 [screws_tilt_adjust]
-screw1: 310,325
+screw1: 0,5
 screw1_name: front left
-screw2: 0,325
+screw2: 310,5
 screw2_name: front right
-screw3: 310,5
+screw3: 0,375
 screw3_name: rear left
-screw4: 0,5
+screw4: 310,375
 screw4_name: rear right
 speed: 50
 horizontal_move_z: 10
@@ -267,10 +288,10 @@ gcode:
     G28
     G90
     G1 Z20 F300
-    G1 Y110 F3600
-    G1 X340 F3600
+    G1 X375 F3600
+    G1 Y-10 F3600
     G4 P1000
-    G1 Y110 F3600
+    G1 X135 Y172 F3600
     BED_MESH_CALIBRATE
     G1 Z0 F300
     G1 Z10 F300
@@ -339,6 +360,7 @@ gcode:
 [gcode_macro START_PRINT]
 default_parameter_BED_TEMP: 60
 default_parameter_EXTRUDER_TEMP: 200
+default_parameter_LOAD: -1
 gcode:
     # HOME MMU
     HOME_MMU
@@ -367,14 +389,29 @@ gcode:
     M109 S{EXTRUDER_TEMP}
     # zero the extruded length
     G92 E0
+    {% if LOAD|int != -1 %}
+        {% if LOAD|int == 0 %}
+            T0
+        {% endif %}
+        {% if LOAD|int == 1 %}
+            T1
+        {% endif %}
+        {% if LOAD|int == 2 %}
+            T2
+        {% endif %}
+        {% if LOAD|int == 3 %}
+            T3
+        {% endif %}
+        {% if LOAD|int == 4 %}
+            T4
+        {% endif %}
+        G92 E0
+    {% endif %}
+    GO_TO_PARKING_OUT
     # start printing
     G1 F9000
     M117 ->> V-King Rocks! <<-
     bip
-#    {% if printer["gcode_macro SELECT_TOOL"].color_selected|int == -1 %}
-#        T0
-#    {% endif %}
-
 
 [gcode_macro END_PRINT]
 gcode:
