add missing parameter

--- a/vking/printer-mmu2s-config.cfg
+++ b/vking/printer-mmu2s-config.cfg
@@ -54,6 +54,7 @@ variable_extruder_eject_temp: 200
 variable_enable_5in1: 1
 variable_purge_after_load: 1
 variable_purge_speed: 200
+variable_enable_purge_servo: 0
 variable_t0_purge_load_length: 40
 variable_t0_purge_unload_length: 0
 variable_t1_purge_load_length: 40
@@ -65,6 +66,7 @@ variable_t3_purge_unload_length: 0
 variable_t4_purge_load_length: 40
 variable_t4_purge_unload_length: 0
 variable_splitter_endstop: 0
+variable_enable_length_sensor: 0
 gcode:
 
 # MMU2S STANDARD
