Home mmu only if not homed

--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -1012,10 +1012,17 @@ gcode:
 #
 ############################################
 
+# Home MMU if not homed
+[gcode_macro HOME_MMU]
+gcode:
+    {% if printer["gcode_macro HOME_MMU"].home == -1 %}
+    FORCE_HOME_MMU
+    {% endif %}
+
 # Home the MMU
 # eject filament if loaded with EJECT_BEFORE_HOME
 # next home the mmu with HOME_MMU_ONLY
-[gcode_macro HOME_MMU]
+[gcode_macro FORCE_HOME_MMU]
 variable_home: -1
 gcode:
     SET_FILAMENT_SENSOR SENSOR=ir_sensor ENABLE=0
