--- a/printer-mmu2s.cfg
+++ b/printer-mmu2s.cfg
@@ -1014,16 +1014,18 @@ gcode:
 
 # Home MMU if not homed
 [gcode_macro HOME_MMU]
+variable_home: -1
 gcode:
     {% if printer["gcode_macro HOME_MMU"].home == -1 %}
-    FORCE_HOME_MMU
+        FORCE_HOME_MMU
+    {% else %}
+        M118 MMU already homed !
     {% endif %}
 
 # Home the MMU
 # eject filament if loaded with EJECT_BEFORE_HOME
 # next home the mmu with HOME_MMU_ONLY
 [gcode_macro FORCE_HOME_MMU]
-variable_home: -1
 gcode:
     SET_FILAMENT_SENSOR SENSOR=ir_sensor ENABLE=0
     {% if printer["gcode_macro VAR_MMU2S"].splitter_endstop == 1 %}
