first update vam8-bowden

--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -2,6 +2,8 @@
 #
 # VAM8 BOWDEN E3D-V6 volcano
 #
+# RAMPS / RE-ARM
+#
 ##################################
 
 ##################################
@@ -282,6 +284,9 @@ retract_speed: 60
 unretract_extra_length: 0
 unretract_speed: 60
 
+[force_move]
+enable_force_move: True
+
 ##################################
 #
 #  PIN
@@ -304,19 +309,6 @@ x_offset: 49
 y_offset: 25
 z_offset: 3.95
 
-[homing_override]
-set_position_z: 0
-axes: z
-gcode:
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X213 F3600
-    G1 X68 Y85 F3600
-    G28 Z0
-    G1 Z0 F300
-    G1 Z10 F300
-
 [bed_mesh]
 speed: 100
 horizontal_move_z: 12
@@ -337,37 +329,6 @@ horizontal_move_z: 10
 retries: 5
 retry_tolerance: 0.02
 
-[gcode_macro Z_TILT_ADJUST]
-rename_existing: OLDZ_TILT_ADJUST
-gcode:
-    G91
-    G1 Z+20
-    G90
-    G1 X213 F3600
-    G1 X68 Y85 F3600
-    OLDZ_TILT_ADJUST
-    G1 Z0 F300
-    G1 Z10 F300
-
-[gcode_macro HOME_PRINT]
-gcode:
-    G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X213 F3600
-    G1 X68 Y85 F3600
-    G28 Z0
-    G91
-    G1 Z+20
-    G90
-    OLDZ_TILT_ADJUST
-    G91
-    G1 Z+20
-    G1 X68 Y85 F3600
-    G28 Z0
-    G1 Z0 F300
-    G1 Z10 F300
-
 [screws_tilt_adjust]
 screw1: -20,0
 screw1_name: front left
@@ -386,32 +347,87 @@ screw_thread: CW-M3
 ###########################################################################
 ###########################################################################
 
-
 ########################
 #
 # MACROS
 #
 ########################
 
-[gcode_macro HOME_PRINT]
+########################
+#                      #
+#   TOUCH'MI           #
+#                      #
+########################
+[gcode_macro VARS_PRINTER]
+variable_touchmi_x_pos: 213
+variable_touchmi_y_pos: 0
+variable_touchmi_z_height: 20
+gcode:
+
+[homing_override]
+set_position_z: 0
+axes: z
 gcode:
     G90
-    G1 Z20 F300
-    G28 X0 Y0
-    G1 X213 F3600
-    G1 X68 Y85 F3600
+    G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
+    DEPLOY_TOUCHMI
+    GO_TO_CENTER
     G28 Z0
-    G91
-    G1 Z+20
+    G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
+
+[gcode_macro GO_TO_CENTER]
+gcode:
+    G1 X68 Y85 F3600
+
+[gcode_macro DEPLOY_TOUCHMI]
+gcode:
+    {% if printer["gcode_macro RETRACT_TOUCHMI"].touchmi_retracted|int == 1 %}
+    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=0
+        {% if not 'xy' in printer.toolhead.homed_axes %}
+        G28 X0 Y0
+        {% endif %}
     G90
-    OLDZ_TILT_ADJUST
-    G91
-    G1 Z+20
-    G1 X68 Y85 F3600
-    G28 Z0
+    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_height|int} F3600
+    G1 Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_height|int} F3600
+    M400
+    {% endif %}
+
+[gcode_macro RETRACT_TOUCHMI]
+variable_touchmi_retracted: 1
+gcode:
+    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
+    G90
     G1 Z0 F300
     G1 Z10 F300
 
+[gcode_macro Z_TILT_ADJUST]
+rename_existing: OLDZ_TILT_ADJUST
+gcode:
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+    G28
+    {% endif %}
+    DEPLOY_TOUCHMI
+    OLDZ_TILT_ADJUST
+
+[gcode_macro BED_MESH_CALIBRATE]
+rename_existing: OLDBED_MESH_CALIBRATE
+gcode: 
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+    G28
+    {% endif %}
+    Z_TILT_ADJUST
+    OLDBED_MESH_CALIBRATE
+    RETRACT_TOUCHMI
+
+[gcode_macro G29]
+gcode:
+    {% if not 'xyz' in printer.toolhead.homed_axes %}
+    G28
+    {% endif %}
+    DEPLOY_TOUCHMI
+    GO_TO_CENTER
+    BED_MESH_CALIBRATE
+    RETRACT_TOUCHMI
 
 ########################
 #
@@ -439,8 +455,13 @@ gcode:
     M190 S{BED_TEMP}
     # Reset the G-Code Z offset (adjust Z offset if needed)
     SET_GCODE_OFFSET Z=0.0
+    # clear pause
+    CLEAR_PAUSE
     # Home the printer
-    HOME_PRINT
+    G28
+    Z_TILT_ADJUST
+    G28 Z0
+    RETRACT_TOUCHMI
     # Move the nozzle near the bed
     G1 Z15 F3000
     # Set and wait for nozzle to reach temperature
@@ -481,13 +502,12 @@ gcode:
 # MISC MACROS
 #
 ########################
-# Use print_start for you slicer starting script
+
 [gcode_macro bip]
 gcode:
     SET_PIN PIN=beeper VALUE=1
     G4 P1000 ; wait 1 s
     SET_PIN PIN=beeper VALUE=0
-
 
 [gcode_macro clean]
 gcode:
