--- a/vam8-bowden/printer.cfg
+++ b/vam8-bowden/printer.cfg
@@ -352,293 +352,14 @@ screw_thread: CW-M3
 # MACROS
 #
 ########################
-
-########################
-#                      #
-#   TOUCH'MI           #
-#                      #
-########################
 [gcode_macro VARS_PRINTER]
 variable_touchmi_x_pos: 213
 variable_touchmi_y_pos: 0
 variable_touchmi_z_height: 20
+variable_enable_mmu: 0
 gcode:
 
-[homing_override]
-set_position_z: 0
-axes: z
-gcode:
-    G90
-    G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
-    DEPLOY_TOUCHMI
-    GO_TO_CENTER
-    G28 Z0
-    G1 Z{printer["gcode_macro VARS_PRINTER"].touchmi_z_height|int} F300
-
-[gcode_macro GO_TO_CENTER]
-gcode:
-    G1 X68 Y85 F3600
-
-[gcode_macro DEPLOY_TOUCHMI]
-gcode:
-    {% if printer["gcode_macro RETRACT_TOUCHMI"].touchmi_retracted|int == 1 %}
-    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=0
-        {% if not 'xy' in printer.toolhead.homed_axes %}
-        G28 X0 Y0
-        {% endif %}
-    G90
-    G1 X{printer["gcode_macro VARS_PRINTER"].touchmi_x_height|int} F3600
-    G1 Y{printer["gcode_macro VARS_PRINTER"].touchmi_y_height|int} F3600
-    M400
-    {% endif %}
-
-[gcode_macro RETRACT_TOUCHMI]
-variable_touchmi_retracted: 1
-gcode:
-    SET_GCODE_VARIABLE MACRO=RETRACT_TOUCHMI VARIABLE=touchmi_retracted VALUE=1
-    G90
-    G1 Z0 F300
-    G1 Z10 F300
-
-[gcode_macro Z_TILT_ADJUST]
-rename_existing: OLDZ_TILT_ADJUST
-gcode:
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-    G28
-    {% endif %}
-    DEPLOY_TOUCHMI
-    OLDZ_TILT_ADJUST
-
-[gcode_macro BED_MESH_CALIBRATE]
-rename_existing: OLDBED_MESH_CALIBRATE
-gcode: 
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-    G28
-    {% endif %}
-    Z_TILT_ADJUST
-    OLDBED_MESH_CALIBRATE
-    RETRACT_TOUCHMI
-
-[gcode_macro G29]
-gcode:
-    {% if not 'xyz' in printer.toolhead.homed_axes %}
-    G28
-    {% endif %}
-    DEPLOY_TOUCHMI
-    GO_TO_CENTER
-    BED_MESH_CALIBRATE
-    RETRACT_TOUCHMI
-
-########################
-#
-# START END MACROS
-#
-########################
-# Replace the slicer's custom start and end g-code scripts with
-# START_PRINT and END_PRINT.
-
-[gcode_macro START_PRINT]
-default_parameter_BED_TEMP: 60
-default_parameter_EXTRUDER_TEMP: 250
-gcode:
-    # metric values
-    G21
-    # Use absolute coordinates
-    G90
-    # set extruder to absolute mode
-    M82
-    # start with the fan off
-    M107
-    # Start bed heating
-    M140 S{BED_TEMP}
-    # Wait for bed to reach temperature
-    M190 S{BED_TEMP}
-    # Reset the G-Code Z offset (adjust Z offset if needed)
-    SET_GCODE_OFFSET Z=0.0
-    # clear pause
-    CLEAR_PAUSE
-    # Home the printer
-    G28
-    Z_TILT_ADJUST
-    G28 Z0
-    RETRACT_TOUCHMI
-    # Move the nozzle near the bed
-    G1 Z15 F3000
-    # Set and wait for nozzle to reach temperature
-    M109 S{EXTRUDER_TEMP}
-    # clean nozzle
-    clean
-    # zero the extruded length
-    G92 E0
-    # start printing
-    G1 F9000
-    M117 Printing...
-    bip
-
-[gcode_macro END_PRINT]
-gcode:
-    # Turn off bed, extruder, and fan
-    M140 S0
-    M104 S0
-    M106 S0
-    # Move nozzle away from print while retracting
-    G91
-    # retract the filament a bit before lifting the nozzle to release some of the pressure
-    G1 E-1 F300
-    # move Z up a bit and retract filament even more
-    G1 Z+5 E-2 X-20 Y-20 F9000 
-    G90
-    # the bed to move to the front
-    G1 X10 Y210 F9000
-    # Disable steppers
-    M84
-    # extruder fan off
-    M107
-    bip
-
-
-########################
-#
-# MISC MACROS
-#
-########################
-
-[gcode_macro bip]
-gcode:
-    SET_PIN PIN=beeper VALUE=1
-    G4 P1000 ; wait 1 s
-    SET_PIN PIN=beeper VALUE=0
-
-[gcode_macro clean]
-gcode:
-    G1 Z10
-    G1 X-14 Y46 F3000
-    G1 Z-1
-    G1 X-7 Y81
-    G1 X-14 Y62
-    G1 X-7 Y62
-    G1 X-14 Y81
-    G1 X-7 Y46
-    G1 X-14 Y46
-    G1 X-7 Y81
-    G1 X-14 Y62
-    G1 Z10
-
-
-
-#############################
-#
-#   LOAD/UNLOAD/PAUSE macros
-#
-#############################
-[pause_resume]
-
-[gcode_macro PAUSE_PRINT]
-default_parameter_X: 10
-default_parameter_Y: 10
-default_parameter_Z: 10
-gcode:
-    SAVE_GCODE_STATE NAME=PAUSE_state
-    PAUSE
-    G91
-    G1 E-1 F2000
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F3000
-    G91
-    bip
-    G4 P200
-    bip
-    G4 P200
-    bip
-    RESTORE_GCODE_STATE NAME=PAUSE_state
-
-[gcode_macro M600]
-default_parameter_X: 10
-default_parameter_Y: 10
-default_parameter_Z: 10
-gcode:
-    SAVE_GCODE_STATE NAME=M600_state
-    PAUSE
-    G91
-    G1 E-1 F2000
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F3000
-    G91
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-50 F3600
-    bip
-    G4 P200
-    bip
-    G4 P200
-    bip
-    G4 P10000
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E100 F3600
-    G1 E50 F500
-    G4 P1000
-    G1 E+1 F600
-    bip
-    ; prime nozzle
-    G1 E-0.8 F4500
-    G1 E0.8 F4500
-    G1 E0.8 F4500
-    RESTORE_GCODE_STATE NAME=M600_state
-
-[gcode_macro CHANGE_EJECT]
-default_parameter_TEMP: 235
-gcode:
-    G28
-    G1 X0 Y0 Z20
-    M109 S{TEMP} T0
-    G91
-    M83
-    bip
-    G1 Z+5 E+1 F4500
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-100 F3600
-    G1 E-50 F3600
-    bip
-    G4 P200
-    bip
-    G4 P200
-    bip
-    M82
-    G90
-    M104 S0 T0
-
-[gcode_macro CHANGE_INSERT]
-default_parameter_TEMP: 235
-gcode:
-    G28
-    G1 X0 Y0 Z20
-    M109 S{TEMP} T0
-    G91
-    M83
-    bip
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+100 F3600
-    G1 E+50 F500
-    G4 P1000
-    G1 E+1 F600
-    bip
-    M82
-    G90
-    M104 S0 T0
+[include  printer-macros.cfg]
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
